syntax = "proto3";

option csharp_namespace = "Kwetter.FollowingService";

package followingservice;

// The greeting service definition.
service FollowGRPCService {
  rpc ToggleBlock (BlockRequest) returns (OperationResponse);
  rpc ToggleFollow (FollowRequest) returns (OperationResponse);
}

// The request message containing the user's name.
message BlockRequest {
  string name = 1;
}

// The response message containing the greetings.
message FollowRequest {
  string message = 1;
}

message OperationResponse {

}
